--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Welcome to Defang IP and URL</h1>
-  <p>Double-click on URLs or IPs to defang and display in an overlay.</p>
+  <p>Select an IP address or URL to defang, and it will be automatically copied to the clipboard</p>
 </body>
 </html>
